Install angular material

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -316,3 +316,6 @@ a:link, a:visited{
 		transform: rotate(360deg);
 	}
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
