--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,4 +22,23 @@
   
   <div id="page">
    <div #divRef></div>
+   <mat-divider></mat-divider>
+   <mat-card class="result">
+    <mat-card-content>
+      <h2 class="example-h2">Result</h2>
+  
+      <mat-slider
+          class="example-margin"
+          [disabled]="disabled"
+          [invert]="invert"
+          [max]="max"
+          [min]="min"
+          [step]="step"
+          [thumbLabel]="thumbLabel"
+          [tickInterval]="tickInterval"
+          [(ngModel)]="value"
+          [vertical]="vertical">
+      </mat-slider>
+    </mat-card-content>
+  </mat-card>
   </div>
